# school_management.v2

./: .gitignore  ANALYSIS.md  CHANGES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml  school_config.schema.json  school_config.yaml
.github/: DOCUMENTATION_INDEX.md  api-reference.md  copilot-instructions-mobile.md  copilot-instructions.md  database-schema.md  mobile-dev.md  ui-dev.md
.github/design-patterns/: SKILL.md
.github/design-patterns/references/: ai-pseudocode.md  behavioral.md  creational.md  pattern-reference.md  structural.md
applications/academic_setup/: apps.py  models.py  orchestrator.py
applications/academic_setup/migrations/: 0001_initial.py
applications/academic_setup/tests/: __init__.py  conftest.py  test_academic_setup_models.py  test_basic_info_completion.py  test_create_academic_year.py  test_csv_import.py  test_live_import_progress.py  test_partial_import_failure.py  test_retry_failed_import.py  test_setup_completion_gate.py
applications/middlewares/: __init__.py  user.py
applications/school_management/academic_management/: apps.py  models.py  schemas.py  services.py  urls.py  views.py
applications/school_management/grade_management/: apps.py  grade_factory.py  models.py  schemas.py  services.py  urls.py  views.py
applications/school_management/staff_management/: admin.py  apps.py  models.py  schemas.py  services.py  urls.py  views.py
applications/school_management/teacher_management/: admin.py  apps.py  models.py  schemas.py  services.py  urls.py  views.py
applications/user_management/: __init__.py  admin.py  apps.py  models.py  profile_rules.py  services.py  user_factory.py  validators.py
applications/user_management/migrations/: 0001_initial.py  0002_alter_parent_children.py
applications/user_management/pojo/: __init__.py  staff.py
applications/user_management/repo/: read.py  write.py
applications/user_management/tests/: __init__.py  conftest.py  test_parent_student_relationships.py  test_profile_access.py  test_profile_integrity.py  test_staff_management.py  test_user_registration.py
config/: api_urls.py  urls.py
config/settings/: __init__.py  base.py  databases.py  envcommon.py  factory.py  local.py  roles.py  schoolconf.py
docs/: ARCHITECTURE-ACADEMIC-YEAR.md  REFACTORING-USER-MANAGEMENT.md
docs/ARCHITECTURE/: SCHOOL_MANAGEMENT_ARCHITECTURE_DIAGRAM.md
docs/ERD/: SCHOOL_MANAGEMENT_ERD.md  SCHOOL_MANAGEMENT_FUTURE_MODULES_ERD.md
docs/PRD/: PRD_ACCEPTANCE_CRITERIA_AND_TEST_CHECKLIST.md  PRD_EPICS_AND_USER_STORIES.md  PRODUCT_REQUIREMENTS_DOCUMENT.md
modules/auth/: auth_rules.py
modules/user/: admin.py  conftest.py  forms.py  managers.py  mixins.py  models.py
modules/user/forms/: __init__.py  auth_forms.py  password_forms.py  registration.py  verification.py
modules/user/migrations/: 0001_initial.py  0002_user_user_user_unique_lowercase_email.py  0003_user_date_modified_user_deleted_at_user_is_deleted_and_more.py  0004_user_role.py
modules/user/tests/: test_models.py  test_user_basic.py  test_user_demographics.py  test_user_email.py  test_user_factories.py  test_user_manager.py  test_user_names.py  test_user_password.py  test_user_phone.py  test_user_preferences.py  (+2 more)
shared/: base_models.py  monad.py
shared/api/: __init__.py  exceptions.py  middleware.py  parsers.py  response.py
tests/: __init__.py  conftest.py  test_databases.py  test_school_config.py  test_settings.py
(+31 files in other folders)
